--- a/app/src/main/res-manager/layout/activity_modify_menu_dish.xml
+++ b/app/src/main/res-manager/layout/activity_modify_menu_dish.xml
@@ -13,91 +13,146 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
 
+            android:gravity="center"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            card_view:cardCornerRadius="4dp"
 
+            android:gravity="center"
+            android:minHeight="64dp"
+            card_view:cardUseCompatPadding="true"
+            android:layout_width="wrap_content"
+            android:clickable="true"
+            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <fragment
                 xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                 android:id="@+id/imageDish_modifyMenu"
                 android:name="it.polito.mad_lab4.manager.photo_viewer.PhotoViewer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 custom:isEditable="true"
                 custom:isLogo="false"
                 custom:heightInDP="200"
                 custom:widthInDP="200"
                 custom:initialBackground="@drawable/default_dish_icon"
                 />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/dishName"
-                android:id="@+id/text_dishName_modifyMenu"
-                android:layout_below="@+id/imageDish_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:paddingTop="20dp" />
-
-            <EditText
+            </LinearLayout>
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                card_view:cardCornerRadius="4dp"
+                android:minHeight="64dp"
+                card_view:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_dishName_modifyMenu"
-                android:layout_below="@+id/text_dishName_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/dishPrice"
-                android:id="@+id/text_dishPrice_modifyMenu"
-                android:layout_below="@+id/edit_dishName_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:paddingTop="20dp" />
-
-            <EditText
+                android:clickable="true"
+                android:layout_height="wrap_content">
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:padding="@dimen/activity_horizontal_margin"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:id="@+id/edit_dishPrice_modifyMenu"
-                android:layout_below="@+id/text_dishPrice_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:orientation="vertical">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/dishType"
-                android:id="@+id/text_dishType_modifyMenu"
-                android:layout_below="@+id/edit_dishPrice_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:paddingTop="20dp"/>
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:id="@+id/imageView2"
+                    android:src="@drawable/ic_restaurant_holo_light"
+                    />
 
-            <Spinner
-                android:id="@+id/list_dishType_modifyMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_dishType_modifyMenu"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:text="@string/dishName"
+                    android:id="@+id/edit_dishName_modifyMenu"
+                    android:singleLine="false" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_euro_holo_right"
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
+                        android:background="@android:color/transparent"
+                        android:padding="5dp"
+                        android:text="5,50"
+                        android:inputType="number"
+                        android:id="@+id/edit_dishPrice_modifyMenu"
+                        android:singleLine="false" />
+
+                </LinearLayout>
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dip"
+                    android:background="#20000000"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="@string/dishType"
+                    android:id="@+id/text_dishType_modifyMenu"
+                    android:layout_below="@+id/edit_dishPrice_modifyMenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:paddingTop="20dp"/>
+                <!-- TODO radio group invece di spinner -->
+                <Spinner
+                    android:id="@+id/list_dishType_modifyMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_dishType_modifyMenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    />
+            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
 
 
-        </RelativeLayout>
+
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
