--- a/app/src/main/res/layout/activity_show_offer.xml
+++ b/app/src/main/res/layout/activity_show_offer.xml
@@ -16,12 +16,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:orientation="vertical"
+                android:gravity="center"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:layout_marginBottom="16dp">
                 <fragment
@@ -36,7 +38,7 @@
                     custom:widthInDP="200"
                     custom:initialBackground="@drawable/special_offer_transparentbg" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <android.support.v7.widget.CardView
 
@@ -154,78 +156,78 @@
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="M"
-                            android:textOff="M"
+                            android:textOn="@string/monday_abb"
+                            android:textOff="@string/monday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/monday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="T"
-                            android:textOff="T"
+                            android:textOn="@string/tuesday_abb"
+                            android:textOff="@string/tuesday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/tuesday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="W"
-                            android:textOff="W"
+                            android:textOn="@string/wednesday_abb"
+                            android:textOff="@string/wednesday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/wedenesday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="T"
-                            android:textOff="T"
+                            android:textOn="@string/thursday_abb"
+                            android:textOff="@string/thursday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/thursday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="F"
-                            android:textOff="F"
+                            android:textOn="@string/friday_abb"
+                            android:textOff="@string/friday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/friday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="S"
-                            android:textOff="S"
+                            android:textOn="@string/saturday_abb"
+                            android:textOff="@string/saturday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/saturday" />
                         <ToggleButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_margin="2dp"
+                            android:layout_margin="3dp"
                             android:text="New ToggleButton"
                             android:clickable="false"
                             android:checked="false"
-                            android:textOn="S"
-                            android:textOff="S"
+                            android:textOn="@string/sunday_abb"
+                            android:textOff="@string/sunday_abb"
                             android:background="@drawable/toggle_selector"
                             android:id="@+id/sunday" />
 
