--- a/app/src/main/res/layout/activity_rate_dishes.xml
+++ b/app/src/main/res/layout/activity_rate_dishes.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
+            android:id="@+id/cover"
             android:src="@drawable/restaurant_test"/>
         <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
 
