--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -251,5 +251,21 @@
 
             </com.github.clans.fab.FloatingActionMenu>
 
+    <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="200dp"
+        android:visibility="gone"
+        android:layout_height="50dp"
+        android:text="@string/make_reservation"
+        android:id="@+id/button3"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp" />
+
 
 </RelativeLayout>
