--- a/app/src/main/res/layout/food_order_item.xml
+++ b/app/src/main/res/layout/food_order_item.xml
@@ -14,35 +14,36 @@
         android:id="@+id/info"
         android:layout_marginLeft="5dp"
         android:orientation="horizontal"
-        >
+        android:layout_centerVertical="true">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/dish_name"
         android:textStyle="italic"
         android:textColor="@color/blackSemitrasparent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="18sp"
-        android:text="Nome piatto"/>
+        android:text="asdlfhsdòlkfDKLAJFòDSJKLAFDJKFSDòKLJFDSòLKF P èp fè P+F fsd jsd"/>
 
 
-
-</LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center|right"
         android:id="@+id/dish_price"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/quantity"
 
         android:textColor="@color/blackSemitrasparent"
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_gravity="center_vertical"
-        android:text="3.5€"/>
+        android:text="3.5€"
+        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -51,7 +52,8 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/quantity"
         android:layout_marginRight="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_centerVertical="true">
 
         <ImageButton
             android:id="@+id/minus"
