--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -154,7 +154,7 @@
 
         <!-- Reviews -->
 
-        <!--<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -175,7 +175,6 @@
                     />
             </android.support.v7.widget.CardView>
         </LinearLayout>-->
-            <!-- End Reviews -->
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView >
