--- a/app/src/main/res/layout/restaurant_userphoto_fragment.xml
+++ b/app/src/main/res/layout/restaurant_userphoto_fragment.xml
@@ -19,6 +19,7 @@
             android:id="@+id/availablePhotosTV"
             android:padding="8dp"
             android:textSize="18sp"
+            android:text="Still no photos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
