--- a/app/src/main/res/layout/reviews_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/reviews_prev_fragment_layout.xml
@@ -17,7 +17,7 @@
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="25 reviews"/>
+            android:text="Still no reviews"/>
     </LinearLayout>
     <RatingBar
         android:id="@+id/ratingBarInPrevReviews"
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
+        android:visibility="gone"
         android:id="@+id/showAllReviewsButton"
         android:text="@string/show_all" />
 </LinearLayout>
