--- a/app/src/main/res/layout/activity_main_infowindow_map.xml
+++ b/app/src/main/res/layout/activity_main_infowindow_map.xml
@@ -5,14 +5,25 @@
     >
     
     <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Prova"
+    android:layout_marginTop="20dp"
+    android:textSize="16dp"
+    android:textColor="@color/good"
+    android:layout_gravity="center_horizontal"
+    android:id="@+id/titolo_map"
+    />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Prova"
         android:layout_marginTop="20dp"
-        android:textSize="16dp"
+        android:textSize="12dp"
         android:textColor="@color/good"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/titolo_map"
+        android:id="@+id/text_map"
         />
 
     <ImageView
