--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,24 +95,64 @@
                                 card_view:cardBackgroundColor="@color/white"
                                 >
 
+                                    <SearchView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:id="@+id/searchView_main"
+                                        android:layout_gravity="center_horizontal"
+                                        />
+
+                            </android.support.v7.widget.CardView>
+
+<!--
+                            <android.support.v7.widget.CardView
+                                xmlns:android="http://schemas.android.com/apk/res/android"
+                                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_marginBottom="10dp"
+                                card_view:cardCornerRadius="5dp"
+                                card_view:cardBackgroundColor="@color/white"
+                                android:visibility="gone"
+                                android:id="@+id/searchNumber_card"
+                                >
+
                                 <SearchView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/searchView_main"
+                                    android:id="@+id/searchView_number"
                                     android:layout_gravity="center_horizontal"
                                     />
+
                             </android.support.v7.widget.CardView>
-                            <!--
-                            <TextView
+
+                            <android.support.v7.widget.CardView
+                                xmlns:android="http://schemas.android.com/apk/res/android"
+                                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="@string/info_ricerca"
-                                android:gravity="center"
-                                android:textSize="12dp"
-                                android:layout_marginBottom="10dp"/>
-                            -->
+                                android:layout_marginTop="5dp"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_marginBottom="10dp"
+                                card_view:cardCornerRadius="5dp"
+                                card_view:cardBackgroundColor="@color/white"
+                                android:visibility="gone"
+                                android:id="@+id/searchCity_card"
+                                >
+                                    <SearchView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:id="@+id/searchView_city"
+                                        android:layout_gravity="center_horizontal"
+                                        />
 
-                        </LinearLayout>
+                            </android.support.v7.widget.CardView>
+                    -->
+                    </LinearLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -125,25 +165,6 @@
                         android:layout_marginBottom="10sp"
                         style="@style/niceText" />
 
-                    <!--
-                        qui ci possiamo mettere una lista con card medio/grandi
-                        che possiamo cliccare e andare subito alla pagina
-                        del ristorante desiderato
-                     -->
-                    <!--
-                    <android.support.v7.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                    android:id="@+id/recyclerView_nearOffers"/>
-
-
-                    <Button
-                        android:layout_marginTop="10dp"
-                        android:id="@+id/addReview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Add Review" />
-                   -->
                     <android.support.v7.widget.CardView
                         xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -178,12 +199,10 @@
                 android:layout_alignParentTop="true"
                 />
 
-
-
         </RelativeLayout>
 
 
-        <!---->
+        <!-- -->
         <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
