--- a/app/src/main/res/layout/notifications_list_item.xml
+++ b/app/src/main/res/layout/notifications_list_item.xml
@@ -14,6 +14,10 @@
         android:clickable="true"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <LinearLayout
             android:padding="8dp"
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -50,6 +54,23 @@
                     android:textStyle="italic" />
             </LinearLayout>
 
+
+        </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="11sp"
+                android:visibility="gone"
+                android:id="@+id/new_notification"
+                android:height="15dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="bold"
+                android:text="@string/newNotification"
+                android:gravity="center_vertical|center_horizontal"
+                android:textColor="@android:color/holo_green_dark"
+                android:background="@drawable/green_gradient"
+
+                />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
