--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,8 @@
                             android:textColor="@android:color/black"
                             android:background="@android:color/transparent"
                             android:hint="@string/email_registrazione"
-                            android:padding="5dp" />
+                            android:padding="5dp"
+                            android:inputType="textEmailAddress"/>
                     </LinearLayout>
 
                     <View
