--- a/app/src/main/res/layout/choice_fragment.xml
+++ b/app/src/main/res/layout/choice_fragment.xml
@@ -22,7 +22,7 @@
             android:id="@+id/choice_layout"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/text"
+                android:id="@+id/title_Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
