--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView"
+            android:id="@+id/title_pickTime"
             android:text="@string/pick_time"
             android:textStyle="bold"
             android:textColor="@android:color/holo_blue_light"
