--- a/app/src/main/res-manager/layout/activity_main_manager.xml
+++ b/app/src/main/res-manager/layout/activity_main_manager.xml
@@ -18,23 +18,63 @@
         android:orientation="vertical">
 
     <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"/>
-        <RelativeLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:background="@android:color/transparent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="Work in progress.."
-                android:textSize="20sp"
-                android:layout_centerHorizontal="true"/>
+       <android.support.v7.widget.CardView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:clickable="true"
+           xmlns:card_view="http://schemas.android.com/apk/res-auto"
+           xmlns:android="http://schemas.android.com/apk/res/android"
+           card_view:cardCornerRadius="4dp"
+           android:minHeight="64dp"
+           card_view:cardUseCompatPadding="true"
+           android:id="@+id/add_new_offer">
+           <LinearLayout
+               android:padding="@dimen/activity_horizontal_margin"
+               android:orientation="vertical"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <TextView
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Button"
-                android:id="@+id/button" />
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:textStyle="bold"
+                   android:textAppearance="@android:style/TextAppearance.Large"
+                   android:text="@string/new_offer"/>
+               <ImageView
+                   android:layout_marginTop="10dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="150dp"
+                   android:scaleType="centerCrop"
+                   android:src="@drawable/blackboard"
+                   android:layout_gravity="center"
+                   android:cropToPadding="false" />
+
+
+               <TextView
+                   android:layout_marginTop="10dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:textStyle="italic"
+                   android:textAppearance="@android:style/TextAppearance.Medium"
+                   android:text="@string/promo_main"/>
+
+           </LinearLayout>
+
+       </android.support.v7.widget.CardView>
             <!--<ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -42,10 +82,48 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_wip"
                 />-->
-        </RelativeLayout>
+                <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    card_view:cardCornerRadius="4dp"
+                    android:minHeight="64dp"
 
+                    android:padding="@dimen/activity_horizontal_margin"
+                    card_view:cardUseCompatPadding="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/activity_horizontal_margin"
+                        android:id="@+id/reviewsFragmentContainer"
+                        android:visibility="gone"
+                        android:orientation="vertical">
+                        <TextView
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textAppearance="@android:style/TextAppearance.Large"
+                            android:text="@string/your_restaurant_reviews"
+                            android:layout_marginBottom="10dp"/>
+
+                    <fragment
+                        android:id="@+id/reviewsPrevFragment"
+                        android:name="it.polito.mad_lab4.restaurant.reviews_prev.ReviewsPrevFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -57,7 +135,8 @@
         app:menu="@menu/activity_drawer_login_manager" />
 
 </android.support.v4.widget.DrawerLayout>
-<!-- <LinearLayout
+ <!--
+<LinearLayout
     android:id="@+id/topLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
